src/objects/GST_Information__c.object
<CustomObject>
    <description>Used in Indian CASS Form (Airline participation process) to save GST Information.</description>
    <fields>
        <fullName>AP_Process_Form__c</fullName>
        <label>AP Process Form</label>
        <referenceTo>AP_Process_Form__c</referenceTo>
        <relationshipLabel>GST Informations</relationshipLabel>
        <relationshipName>GST_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>India_Local_VAT_City__c</fullName>
        <label>India Local VAT City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Local_VAT_Number__c</fullName>
        <label>India Local VAT Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Local_VAT_State_Code__c</fullName>
        <label>India Local VAT State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Local_VAT_State_Name__c</fullName>
        <label>India Local VAT State Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Local_VAT_Street__c</fullName>
        <label>India Local VAT Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GST Information</label>
    <nameField>
        <displayFormat>GSTInfo-{0000000}</displayFormat>
        <label>GST Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GST Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>